--- a/resume.tex
+++ b/resume.tex
@@ -173,9 +173,9 @@
       \resumeProjectHeading
           {\textbf{Image Caption Generator} - \emph{TensorFlow, VGG16, NLP, Python}}{December 2024}
           \resumeItemListStart
-            \resumeItem{Created image-captioning model combining CNN and LSTM with attention, achieving BLEU-1 score of 0.65.}
-            \resumeItem{Preprocessed 8K image-text pairs using custom tokenizers and padded data pipelines, reducing training time by 30\%.}
-            \resumeItem{Applied transfer learning and aligned visual-textual embeddings with BLEU evaluation.}
+            \resumeItem{Created an AI image captioning system using TensorFlow, integrating VGG16 CNN for feature extraction and LSTM networks for text generation, achieving a BLEU-1 score of 0.64 on the Flickr8k dataset}
+            \resumeItem{Architected an end-to-end deep learning pipeline combining computer vision and NLP techniques, processing 8,000+ images and extracting 4096-dimensional feature vectors for enhanced caption accuracy}
+            \resumeItem{Developed a custom data generator and optimized training workflow using Keras, reducing model loss from 6.36 to 3.96 over 20 epochs while handling a vocabulary of 8,700+ unique words}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
