--- a/resume.tex
+++ b/resume.tex
@@ -55,7 +55,7 @@
 %-------------------------
 % Custom commands - tighter spacing
 \newcommand{\resumeItem}[1]{
-  \item\small{
+  \item{
     {#1 \vspace{-3pt}}
   }
 }
@@ -64,28 +64,28 @@
   \vspace{-2pt}\item
     \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
       \textbf{#1} & #2 \\
-      \textit{\small#3} & \textit{\small #4} \\
+      \textit{#3} & \textit{#4} \\
     \end{tabular*}\vspace{-6pt}
 }
 
 \newcommand{\resumeSubSubheading}[2]{
     \item
     \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-      \textit{\small#1} & \textit{\small #2} \\
+      \textit{#1} & \textit{#2} \\
     \end{tabular*}\vspace{-7pt}
 }
 
 \newcommand{\resumeProjectHeading}[2]{
     \item
     \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-      \small#1 & #2 \\
+      #1 & #2 \\
     \end{tabular*}\vspace{-5pt}
 }
 
 \newcommand{\resumePublicationsHeading}[2]{
     \item
     \begin{tabular*}{0.97\textwidth}{l@{\extracolsep{\fill}}r}
-      \small#1 & #2 \\
+      #1 & #2 \\
     \end{tabular*}\vspace{-6pt}
 }
 \newcommand{\resumeSubItem}[1]{\resumeItem{#1}\vspace{-4pt}}
@@ -111,9 +111,9 @@
 %----------PROFESSIONAL SUMMARY------------
 \section{Professional Summary}
 \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
+    \item{
      Computer Science graduate student with specialized research experience in machine learning, computer vision, and large-scale data processing. Proven track record developing scalable AI solutions for agricultural and genomic applications with focus on system architecture optimization and algorithm efficiency. Seeking software engineering opportunities to apply ML expertise and algorithmic problem-solving skills at leading technology companies.
-    }}
+    }
 \end{itemize}
 
 %-----------EDUCATION-----------
@@ -121,29 +121,29 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {University of Georgia}{Athens, GA}
-      {Master of Science in Computer Science;  GPA: 3.76}{Aug. 2024 -- Present}
+      {Master of Science in Computer Science - GPA: 3.76}{August 2024 - Expected Graduation: May 2026}
     \resumeSubheading
       {RMK Engineering College}{Chennai, TN}
-      {Bachelors of Technology in Computer Science and Business Systems; GPA: 3.7}{Aug. 2020 -- May 2024}
+      {Bachelor of Technology in Computer Science and Business Systems - GPA: 3.7}{August 2020 - Graduated: May 2024}
   \resumeSubHeadingListEnd
 
 %-----------TECHNICAL SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Python, Java, JavaScript, TypeScript, SQL, C++, R} \\
-     \textbf{ML/AI}{: TensorFlow, PyTorch, Scikit-Learn, Keras, Transformers, Computer Vision, NLP} \\
-     \textbf{Data Engineering}{: NumPy, Pandas, PySpark, Hadoop, Data Pipelines} \\
-     \textbf{Cloud \& DevOps}{: AWS (S3, EC2, Lambda), Docker, CI/CD, Kubernetes} \\
-     \textbf{Web \& Mobile}{: React, Node.js, RESTful APIs, Flask, Microservices Architecture}
-    }}
+    \item{
+     \textbf{Languages:} Python, Java, JavaScript, TypeScript, SQL, C++, R \\
+     \textbf{ML/AI:} TensorFlow, PyTorch, Scikit-Learn, Keras, Transformers, Computer Vision, NLP \\
+     \textbf{Data Engineering:} NumPy, Pandas, PySpark, Hadoop, Data Pipelines \\
+     \textbf{Cloud \& DevOps:} AWS (S3, EC2, Lambda), Docker, CI/CD, Kubernetes \\
+     \textbf{Web \& Mobile:} React, Node.js, RESTful APIs, Flask, Microservices Architecture
+    }
  \end{itemize}
 
 %-----------EXPERIENCE-----------
 \section{Experience}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Graduate Research Assistant — Genomic Prediction of Soybean Yield}{May 2025 -- Present}
+      {Graduate Research Assistant — Genomic Prediction of Soybean Yield}{May 2025 - Present}
       {University of Georgia}{Athens, GA}
       \resumeItemListStart
         \resumeItem{Engineered a scalable dimension reduction pipeline for high-dimensional DNA sequence data (4000 features x 1000 samples), implementing Gaussian Process models with distributed computing that preserved biological significance and improved prediction accuracy by 23\%.}
@@ -152,7 +152,7 @@
       \resumeItemListEnd
       
     \resumeSubheading
-      {Graduate Research Assistant — Automated Maize Brace-Root Phenotyping}{May 2025 -- Present}
+      {Graduate Research Assistant — Automated Maize Brace-Root Phenotyping}{May 2025 - Present}
       {University of Georgia}{Athens, GA}
       \resumeItemListStart
         \resumeItem{Designed high-throughput computer vision system using PyTorch and OpenCV for automated agricultural phenotyping, improving maize root segmentation accuracy from 47\% to 71\% through systematic evaluation and optimization of U-Net architecture variants.}
