--- a/resume.tex
+++ b/resume.tex
@@ -5,7 +5,7 @@
 % License : MIT
 %------------------------
 
-\documentclass[letterpaper,10.5pt]{article}
+\documentclass[letterpaper,10pt]{article}
 
 \usepackage{latexsym}
 \usepackage[empty]{fullpage}
@@ -104,14 +104,14 @@
 
 %----------HEADING------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-   \textbf{\href {}}{\Large Venu Dattathreya Vemuru} & Email: \href{mailto:venudattathreya@gmail.com}{venudattathreya@gmail.com}\\
+   \textbf{\href{}}{\Large Venu Dattathreya Vemuru} & Email: \href{mailto:venudattathreya@gmail.com}{venudattathreya@gmail.com}\\
    \href{https://www.linkedin.com/in/venu-dattathreya-vemuru-a5020b225}{LinkedIn} \hspace{1em} \href{https://github.com/venu284}{GitHub} & Mobile: +1-(706)-380-2548 \\
 \end{tabular*}
 
 %----------PROFESSIONAL SUMMARY------------
 \section{Professional Summary}
 \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
+    {\item{
      Computer Science graduate student with specialized research experience in machine learning, computer vision, and large-scale data processing. Proven track record developing scalable AI solutions for agricultural and genomic applications with focus on system architecture optimization and algorithm efficiency. Seeking software engineering opportunities to apply ML expertise and algorithmic problem-solving skills at leading technology companies.
     }}
 \end{itemize}
@@ -121,22 +121,22 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {University of Georgia}{Athens, GA}
-      {Master of Science in Computer Science;  GPA: 3.76}{Aug 2024 - May 2026 (Expected)}
+      {Master of Science in Computer Science - GPA: 3.76}{Aug 2024 - May 2026 (Expected)}
     \resumeSubheading
-      {RMK Engineering College}{Chennai, TN}
-      {Bachelors of Technology in Computer Science and Business Systems; GPA: 3.7}{Aug 2020 - May 2024}
+      {RMK Engineering College}{Chennai, India}
+      {Bachelor of Technology in Computer Science and Business Systems - GPA: 3.7}{Aug 2020 - May 2024}
   \resumeSubHeadingListEnd
 
 %-----------TECHNICAL SKILLS-----------
 \section{Technical Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
-    \small{\item{
-     \textbf{Languages}{: Python, Java, JavaScript, TypeScript, SQL, R} \\
-     \textbf{ML/AI}{: TensorFlow, PyTorch, Scikit-Learn, Keras, Transformers, Computer Vision, NLP} \\
-     \textbf{Data Engineering}{: NumPy, Pandas, Data Pipelines} \\
-     \textbf{Cloud \& DevOps}{: Docker, CI/CD, Kubernetes} \\
-     \textbf{Web \& Mobile}{: React, Node.js, RESTful APIs, Flask, Microservices Architecture}
-    }}
+    \item{
+     \textbf{Languages:} Python, Java, JavaScript, SQL, R \\
+     \textbf{ML/AI:} TensorFlow, PyTorch, Scikit-Learn, Keras, Computer Vision, NLP \\
+     \textbf{Data Engineering:} NumPy, Pandas, Data Pipelines \\
+     \textbf{DevOps:} Docker, CI/CD, Kubernetes \\
+     %\textbf{Security:} Penetration Testing, Nmap, Burp Suite, Metasploit
+    }
  \end{itemize}
 
 %-----------EXPERIENCE-----------
@@ -146,18 +146,25 @@
       {Graduate Research Assistant — Genomic Prediction of Soybean Yield}{May 2025 - Present}
       {University of Georgia}{Athens, GA}
       \resumeItemListStart
-        \resumeItem{Engineered a scalable dimension reduction pipeline for high-dimensional DNA sequence data (4000 features x 1000 samples), implementing Gaussian Process models with distributed computing that preserved biological significance and improved prediction accuracy by 23\%.}
-        \resumeItem{Developed optimized Python data preprocessing algorithms for genetic sequences, handling missing values and implementing NumPy vectorization that reduced processing time by 65\% while ensuring cross-dataset model performance.}
-        \resumeItem{Implemented and benchmarked multiple dimensionality reduction techniques (PCA, t-SNE, UMAP) with scikit-learn hyperparameter tuning, conducting comparative analysis to identify the most efficient approach for genomic data visualization and feature extraction.}
+        \resumeItem{Engineered a scalable dimension reduction pipeline for high-dimensional DNA sequence data, implementing Gaussian Process models with distributed computing that improved prediction accuracy by 23\%.}
+        \resumeItem{Developed optimized Python data preprocessing algorithms for genetic sequences, implementing NumPy vectorization that reduced processing time by 65\% while ensuring cross-dataset model performance.}
+        \resumeItem{Implemented multiple dimensionality reduction techniques (PCA, t-SNE, UMAP) with scikit-learn hyperparameter tuning to identify the most efficient approach for genomic data visualization.}
       \resumeItemListEnd
       
     \resumeSubheading
       {Graduate Research Assistant — Automated Maize Brace-Root Phenotyping}{May 2025 - Present}
       {University of Georgia}{Athens, GA}
       \resumeItemListStart
-        \resumeItem{Designed high-throughput computer vision system using PyTorch and OpenCV for automated agricultural phenotyping, improving maize root segmentation accuracy from 47\% to 71\% through systematic evaluation and optimization of U-Net architecture variants.}
-        \resumeItem{Established comprehensive deep learning pipeline including transfer learning, two-stage fine-tuning and advanced data augmentation techniques that reduced analysis time by 35\% compared to manual methods.}
-        \resumeItem{Architected robust data processing solution with Python that resolved complex JSON annotation formats, coordinate transformation errors, and data integrity challenges, establishing reliable foundation for distributed machine learning model training.}
+        \resumeItem{Designed computer vision system using PyTorch and OpenCV for agricultural phenotyping, improving maize root segmentation accuracy from 47\% to 71\% through optimization of U-Net architecture.}
+        \resumeItem{Established deep learning pipeline including transfer learning and data augmentation techniques that reduced analysis time by 35\% compared to manual methods.}
+        \resumeItem{Architected data processing solution with Python that resolved complex JSON annotation formats and data integrity challenges for distributed machine learning model training.}
+      \resumeItemListEnd
+      
+    \resumeSubheading
+      {Cybersecurity Intern}{Feb 2023 - Mar 2023}
+      {Corizo}{Bengaluru, India (Remote)}
+      \resumeItemListStart
+        \resumeItem{Identified 50+ vulnerabilities using Nmap, Burp Suite and Metasploit; implemented patches improving security by 25\% and developed automation reducing manual effort by 40\%.}
       \resumeItemListEnd
   \resumeSubHeadingListEnd
 
@@ -165,18 +172,17 @@
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{Student Face Recognition System} - \emph{Python, Flask, React, Docker}}{Jan 2025}
+          {\textbf{Student Face Recognition System} - \emph{Python, Flask, React, OpenCV, AWS}}{Jan 2025}
           \resumeItemListStart
             \resumeItem{Designed a distributed facial recognition system that processes real-time video streams, extracts face encodings, and matches identities with 95\%+ accuracy using OpenCV and face\_recognition libraries.}
             \resumeItem{Built a microservices architecture with React frontend and Flask backend, deploying RESTful APIs that integrated computer vision algorithms with SQLAlchemy database for scalable student identification.}
             \resumeItem{Containerized application components with Docker, implementing secure image processing pipeline with validation protocols and efficient data storage that reduced identification time by 40\%.}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Image Caption Generator} - \emph{TensorFlow, VGG16, NLP, Python, GCP}}{Dec 2024}
+          {\textbf{Image Caption Generator} - \emph{TensorFlow, VGG16, LSTM, Python}}{Dec 2024}
           \resumeItemListStart
-            \resumeItem{Created an AI image captioning system using TensorFlow, integrating VGG16 CNN for feature extraction and LSTM networks for text generation, achieving a BLEU-1 score of 0.64 on the Flickr8k dataset.}
-            \resumeItem{Architected an end-to-end deep learning pipeline combining computer vision and NLP techniques, processing 8,000+ images and extracting 4096-dimensional feature vectors using optimized parallel processing.}
-            \resumeItem{Developed a custom data generator and optimized training workflow using Keras with TensorFlow backend, implementing checkpoint-based training that reduced model loss from 6.36 to 3.96 while handling a vocabulary of 8,700+ unique words.}
+            \resumeItem{Created image captioning system combining VGG16 CNN for feature extraction and LSTM networks, achieving BLEU-1 score of 0.64; processed 8,000+ images extracting 4096-dimensional vectors.}
+            \resumeItem{Developed custom data generator with Keras/TensorFlow, implementing checkpoint-based training reducing model loss from 6.36 to 3.96 with 8,700+ word vocabulary.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
 
