Update Project section

--- a/resume.tex
+++ b/resume.tex
@@ -171,21 +171,30 @@
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
-      \resumeProjectHeading
-          {\textbf{Student Face Recognition System} - \emph{Python, Flask, React, OpenCV, AWS}}{Jan 2025}
-          \resumeItemListStart
-            \resumeItem{Designed a distributed facial recognition system that processes real-time video streams, extracts face encodings, and matches identities with 95\%+ accuracy using OpenCV and face\_recognition libraries.}
-            \resumeItem{Built a microservices architecture with React frontend and Flask backend, deploying RESTful APIs that integrated computer vision algorithms with SQLAlchemy database for scalable student identification.}
-            \resumeItem{Containerized application components with Docker, implementing secure image processing pipeline with validation protocols and efficient data storage that reduced identification time by 40\%.}
-          \resumeItemListEnd
-      \resumeProjectHeading
+
+\resumeProjectHeading
           {\textbf{Image Caption Generator} - \emph{TensorFlow, VGG16, LSTM, Python}}{Dec 2024}
           \resumeItemListStart
             \resumeItem{Created image captioning system combining VGG16 CNN for feature extraction and LSTM networks, achieving BLEU-1 score of 0.64; processed 8,000+ images extracting 4096-dimensional vectors.}
             \resumeItem{Developed custom data generator with Keras/TensorFlow, implementing checkpoint-based training reducing model loss from 6.36 to 3.96 with 8,700+ word vocabulary.}
+          \resumeItemListEnd 
+      \resumeProjectHeading
+          {\textbf{E-Cinema Booking System} - \emph{React, Node.js, Express, MongoDB, JWT}}{Feb 2025}
+          \resumeItemListStart
+            \resumeItem{Architected a comprehensive full-stack web application providing interactive digital experiences for movie browsing and booking, implementing modern UI design patterns and responsive layouts that enhanced user engagement.}
+            \resumeItem{Engineered dynamic seat selection interface with client-side rendering optimizations and state management using Redux, reducing load times by 40\% while maintaining a seamless, visually compelling user experience.}
+            \resumeItem{Developed modular, reusable frontend components and backend microservices with thorough test coverage, ensuring 99.9\% uptime and 1000+ concurrent users support through clean, maintainable code and efficient algorithms.}
           \resumeItemListEnd
+          
+      \resumeProjectHeading
+          {\textbf{Student Face Recognition System} - \emph{Python, Flask, React, OpenCV}}{Jan 2025}
+          \resumeItemListStart
+            \resumeItem{Designed and implemented a full-stack application leveraging computer vision for real-time student identification, creating an intuitive user interface with React that visualizes complex data and provides seamless user interactions.}
+            \resumeItem{Built scalable microservices architecture with RESTful APIs connecting frontend experience to backend processing, implementing efficient data flow patterns and responsive feedback mechanisms.}
+            \resumeItem{Containerized application using Docker with CI/CD pipeline for continuous deployment, ensuring reliable delivery of new features while maintaining 95\%+ system accuracy and intuitive user experience.}
+          \resumeItemListEnd
+           
     \resumeSubHeadingListEnd
-
 %-----------Publications-----------
 \section{Publications}
     \resumeSubHeadingListStart
