--- a/resume.tex
+++ b/resume.tex
@@ -149,6 +149,14 @@
 \section{Projects}
     \resumeSubHeadingListStart
 
+    \resumeProjectHeading
+          {\textbf{Flight Booking System} - \emph{Java, Spring Boot, JPA/Hibernate, MySQL, JWT}}{Aug 2025}
+          \resumeItemListStart
+            \resumeItem{Architected and implemented a Java Spring Boot flight reservation system with REST APIs and MVC design pattern, achieving 99\% system availability while handling concurrent user requests through efficient thread management.}
+            \resumeItem{Engineered secure user authentication using Spring Security and JWT integration, implementing role-based access control that reduced unauthorized access attempts by 30\% while maintaining API response times under 200ms.}
+            \resumeItem{Designed scalable data persistence layer with JPA/Hibernate and MySQL, optimizing complex flight search queries that improved system performance by 35\% through strategic database indexing and query optimization.}
+          \resumeItemListEnd
+
 \resumeProjectHeading
           {\textbf{Image Caption Generator} - \emph{TensorFlow, VGG16, LSTM, Python}}{Dec 2024}
           \resumeItemListStart
