Rename project from 'Flight Booking System' to 'Sky Hop'

--- a/resume.tex
+++ b/resume.tex
@@ -150,7 +150,7 @@
     \resumeSubHeadingListStart
 
     \resumeProjectHeading
-          {\textbf{Flight Booking System} - \emph{Java, Spring Boot, JPA/Hibernate, MySQL, JWT}}{Aug 2025}
+          {\textbf{Sky Hop} - \emph{Java, Spring Boot, JPA/Hibernate, MySQL, JWT}}{Aug 2025}
           \resumeItemListStart
             \resumeItem{Architected and implemented a Java Spring Boot flight reservation system with REST APIs and MVC design pattern, achieving 99\% system availability while handling concurrent user requests through efficient thread management.}
             \resumeItem{Engineered secure user authentication using Spring Security and JWT integration, implementing role-based access control that reduced unauthorized access attempts by 30\% while maintaining API response times under 200ms.}
