Remove Image Caption Generator project from resume

--- a/resume.tex
+++ b/resume.tex
@@ -157,12 +157,12 @@
             \resumeItem{Designed scalable data persistence layer with JPA/Hibernate and MySQL, optimizing complex flight search queries that improved system performance by 35\% through strategic database indexing and query optimization.}
           \resumeItemListEnd
 
-\resumeProjectHeading
-          {\textbf{Image Caption Generator} - \emph{TensorFlow, VGG16, LSTM, Python}}{Dec 2024}
-          \resumeItemListStart
-            \resumeItem{Created image captioning system combining VGG16 CNN for feature extraction and LSTM networks, achieving BLEU-1 score of 0.64; processed 8,000+ images extracting 4096-dimensional vectors.}
-            \resumeItem{Developed custom data generator with Keras/TensorFlow, implementing checkpoint-based training reducing model loss from 6.36 to 3.96 with 8,700+ word vocabulary.}
-          \resumeItemListEnd 
+%\resumeProjectHeading
+          %{\textbf{Image Caption Generator} - \emph{TensorFlow, VGG16, LSTM, Python}}{Dec 2024}
+         % \resumeItemListStart
+          %  \resumeItem{Created image captioning system combining VGG16 CNN for feature extraction and LSTM networks, achieving BLEU-1 score of 0.64; processed 8,000+ images extracting 4096-dimensional vectors.}
+          %  \resumeItem{Developed custom data generator with Keras/TensorFlow, implementing checkpoint-based training reducing model loss from 6.36 to 3.96 with 8,700+ word vocabulary.}
+        %  \resumeItemListEnd 
       \resumeProjectHeading
           {\textbf{E-Cinema Booking System} - \emph{React, Node.js, Express, MongoDB, JWT}}{Feb 2025}
           \resumeItemListStart
