--- a/resume.tex
+++ b/resume.tex
@@ -148,39 +148,39 @@
 %-----------PROJECTS-----------
 \section{Projects}
     \resumeSubHeadingListStart
+    \resumeProjectHeading
+          {\textbf{\href{https://github.com/venu284/e-cinema-booking.git}{E-Cinema Booking System}} - \emph{React, Node.js, Express, MongoDB, JWT}}{Feb 2025}
+          \resumeItemListStart
+            \resumeItem{Engineered responsive web application with React components and CSS3 flexbox/grid, ensuring seamless user experience across mobile, tablet, and desktop devices while maintaining WCAG accessibility standards.}
+            \resumeItem{Implemented modern UI/UX design patterns with JavaScript and React hooks for dynamic seat selection interface, reducing page load times by 40\% through efficient DOM manipulation and code splitting.}
+            \resumeItem{Developed RESTful API endpoints with Node.js and Express to handle user authentication, ticket reservations, and payment processing, ensuring secure data transmission and cross-browser compatibility.}
+          \resumeItemListEnd
+          
 
     \resumeProjectHeading
-          {\textbf{Sky Hop} - \emph{Java, Spring Boot, JPA/Hibernate, MySQL, JWT}}{Aug 2025}
+          {\textbf{\href{https://github.com/venu284/Flight-Booking.git}{Sky Hop}} - \emph{Java, Spring Boot, JPA/Hibernate, MySQL, JWT}}{Aug 2025}
           \resumeItemListStart
             \resumeItem{Architected and implemented a Java Spring Boot flight reservation system with REST APIs and MVC design pattern, achieving 99\% system availability while handling concurrent user requests through efficient thread management.}
             \resumeItem{Engineered secure user authentication using Spring Security and JWT integration, implementing role-based access control that reduced unauthorized access attempts by 30\% while maintaining API response times under 200ms.}
             \resumeItem{Designed scalable data persistence layer with JPA/Hibernate and MySQL, optimizing complex flight search queries that improved system performance by 35\% through strategic database indexing and query optimization.}
           \resumeItemListEnd
 
+           \resumeProjectHeading
+          {\textbf{\href{https://github.com/venu284/Student-Identification-Management.git}{Student Face Recognition System}} - \emph{Python, Flask, React, OpenCV}}{Jan 2025}
+          \resumeItemListStart
+             \resumeItem{Designed responsive web interface with React components and CSS3, creating intuitive navigation and dashboard elements that visualize complex data through interactive charts and clean typography.}
+      \resumeItem{Built RESTful API architecture connecting React frontend to Python backend services, implementing efficient state management and asynchronous data fetching with Axios.}
+      \resumeItem{Created comprehensive testing suite with Jest and React Testing Library for frontend components, ensuring cross-browser compatibility and responsive design functionality across all device sizes.}
+          \resumeItemListEnd
+           
+
 \resumeProjectHeading
-          {\textbf{Image Caption Generator} - \emph{TensorFlow, VGG16, LSTM, Python}}{Dec 2024}
+          {\textbf{\href{https://github.com/venu284/Image-Caption-Generator-using-CNN-and-NLP.git}{Image Caption Generator}} - \emph{TensorFlow, VGG16, LSTM, Python}}{Dec 2024}
           \resumeItemListStart
             \resumeItem{Created image captioning system combining VGG16 CNN for feature extraction and LSTM networks, achieving BLEU-1 score of 0.64; processed 8,000+ images extracting 4096-dimensional vectors.}
             \resumeItem{Developed custom data generator with Keras/TensorFlow, implementing checkpoint-based training reducing model loss from 6.36 to 3.96 with 8,700+ word vocabulary.}
-          \resumeItemListEnd 
-      \resumeProjectHeading
-          {\textbf{E-Cinema Booking System} - \emph{React, Node.js, Express, MongoDB, JWT}}{Feb 2025}
-          \resumeItemListStart
-            \resumeItem{Architected a comprehensive full-stack web application providing interactive digital experiences for movie browsing and booking, implementing modern UI design patterns and responsive layouts that enhanced user engagement.}
-            \resumeItem{Engineered dynamic seat selection interface with client-side rendering optimizations, reducing load times by 40\% while maintaining a seamless, visually compelling user experience.}
-            \resumeItem{Developed modular, reusable frontend components and backend microservices with thorough test coverage, ensuring 99.9\% uptime and 1000+ concurrent users support through clean, maintainable code and efficient algorithms.}
           \resumeItemListEnd
-          
-      \resumeProjectHeading
-          {\textbf{Student Face Recognition System} - \emph{Python, Flask, React, OpenCV}}{Jan 2025}
-          \resumeItemListStart
-            \resumeItem{Designed and implemented a full-stack application leveraging computer vision for real-time student identification, creating an intuitive user interface with React that visualizes complex data and provides seamless user interactions.}
-            \resumeItem{Built scalable microservices architecture with RESTful APIs connecting frontend experience to backend processing, implementing efficient data flow patterns and responsive feedback mechanisms.}
-            \resumeItem{Containerized application using Docker with CI/CD pipeline for continuous deployment, ensuring reliable delivery of new features while maintaining 95\%+ system accuracy and intuitive user experience.}
-          \resumeItemListEnd
-           
     \resumeSubHeadingListEnd
-
 
 %-----------TECHNICAL SKILLS-----------
 \section{Technical Skills}
